[gd_scene load_steps=5 format=3 uid="uid://dj44kaa67lmof"]

[ext_resource type="Script" uid="uid://k7r2gnouydm0" path="res://Scripts/player.gd" id="1_v0iea"]
[ext_resource type="AudioStream" uid="uid://ch7dn7mimgno0" path="res://Assets/SFX/jump.mp3" id="2_cvnsp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f60y1"]
size = Vector2(12, 12)

[sub_resource type="CanvasTexture" id="CanvasTexture_v0iea"]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_v0iea")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_f60y1")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.67451, 0, 0.235294, 1)
scale = Vector2(12, 12)
texture = SubResource("CanvasTexture_v0iea")

[node name="WallJumpTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="JumpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_cvnsp")
volume_db = -7.15

[connection signal="timeout" from="WallJumpTimer" to="." method="_on_wall_jump_timer_timeout"]
